<resources>
    <string name="app_name">Trees and Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_button_txt">Menu</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
