<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.treepository.TourFragment">

    <ListView
        android:id="@+id/TourList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAlignment="viewStart"
        android:layout_gravity="start"/>

</FrameLayout>
